--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="QuickProbe is a free, open-source desktop application for system administrators to monitor Windows and Linux servers. Real-time health probes via WinRM and SSH, one-click RDP launch, and secure credential management." />
     <meta name="keywords"
         content="QuickProbe, server monitoring, Windows Server, Linux, WinRM, SSH, RDP launcher, sysadmin tool, open source, Tauri, Rust" />
-    <meta name="author" content="Steve Watson" />
+    <meta name="author" content="Swatto" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://swatto.co.uk/" />
 
@@ -404,10 +404,10 @@
             "operatingSystem": "Windows 10, Windows 11, Windows Server 2012 R2+",
             "description": "A free, open-source desktop application for system administrators to monitor Windows and Linux server health via WinRM and SSH, with one-click RDP launch and secure credential management.",
             "url": "https://swatto.co.uk/",
-            "downloadUrl": "https://github.com/swatto/quickprobe/releases",
+            "downloadUrl": "https://github.com/Swatto86/QuickProbe/releases",
             "author": {
                 "@type": "Person",
-                "name": "Steve Watson"
+                "name": "Swatto"
             },
             "softwareVersion": "1.0.1",
             "license": "MIT",
@@ -433,10 +433,10 @@
                     Check server health, launch RDP sessions, and manage your fleet—all from one place.
                 </p>
                 <div class="hero-actions">
-                    <a href="https://github.com/swatto/quickprobe/releases" class="btn btn-primary">
+                    <a href="https://github.com/Swatto86/QuickProbe/releases" class="btn btn-primary">
                         ⬇️ Download for Windows
                     </a>
-                    <a href="https://github.com/swatto/quickprobe" class="btn btn-secondary">
+                    <a href="https://github.com/Swatto86/QuickProbe" class="btn btn-secondary">
                         View on GitHub
                     </a>
                 </div>
@@ -749,9 +749,9 @@
             <p>
                 <strong>QuickProbe</strong> is open source under the MIT License.
                 <br />
-                <a href="https://github.com/swatto/quickprobe">GitHub</a> •
-                <a href="https://github.com/swatto/quickprobe/issues">Report an Issue</a> •
-                Made by <a href="https://github.com/swatto">Steve Watson</a>
+                <a href="https://github.com/Swatto86/QuickProbe">GitHub</a> •
+                <a href="https://github.com/Swatto86/QuickProbe/issues">Report an Issue</a> •
+                Made by <a href="https://github.com/Swatto86">Swatto</a>
             </p>
         </div>
     </footer>
