--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                 "@type": "Person",
                 "name": "Swatto"
             },
-            "softwareVersion": "1.0.1",
+            "softwareVersion": "2.0.1",
             "license": "MIT",
             "isAccessibleForFree": true,
             "offers": {
@@ -513,6 +513,14 @@
                         <p>
                             Export your configuration as an AES-256 encrypted ZIP file.
                             Migrate to a new machine or share with your team securely.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <div class="card-icon">🎯</div>
+                        <h3>Single Instance</h3>
+                        <p>
+                            Only one instance of QuickProbe can run at a time. Launching again
+                            focuses the existing window—no duplicates, no confusion.
                         </p>
                     </div>
                 </div>
@@ -707,7 +715,7 @@
                         <tbody>
                             <tr>
                                 <td><strong>Backend</strong></td>
-                                <td>Rust + Tauri 1.6</td>
+                                <td>Rust + Tauri 2.x</td>
                             </tr>
                             <tr>
                                 <td><strong>Frontend</strong></td>
