--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                 "@type": "Person",
                 "name": "Swatto"
             },
-            "softwareVersion": "2.0.1",
+            "softwareVersion": "2.x",
             "license": "MIT",
             "isAccessibleForFree": true,
             "offers": {
@@ -764,5 +764,6 @@
         </div>
     </footer>
 </body>
+
 
 </html>
