--- a/SharedScope-Overview.html
+++ b/SharedScope-Overview.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://swatto.co.uk/FS-Overview.html">
+    <meta http-equiv="refresh" content="0;url=https://swatto.co.uk/FSAnalyser-Overview.html">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>Redirecting to <a href="https://swatto.co.uk/FS-Overview.html">FS-Overview.html</a>...</p>
+    <p>Redirecting to <a href="https://swatto.co.uk/FSAnalyser-Overview.html">FS-Overview.html</a>...</p>
     <script>
-        window.location.href = "https://swatto.co.uk/FS-Overview.html";
+        window.location.href = "https://swatto.co.uk/FSAnalyser-Overview.html";
     </script>
 </body>
 </html>
